# Human_Activity_Recognition

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  HAR.ioc  HAR.launch  README.md  STM32U585AIIXQ_FLASH.ld  STM32U585AIIXQ_RAM.ld  fix_build_log.py  fix_compile_commands.py  gen_compile_commands.sh
.ai/: network_best_model.h5_c_graph.json  network_best_model.h5_report.json  network_best_model_no_preprocess.h5_c_graph.json  network_best_model_no_preprocess.h5_report.json
Debug/: makefile
Lib/: FreeRTOS_CLI.c  FreeRTOS_CLI.h  log_utils.c  (+9 more)
Test/: CMakeLists.txt  project.yml  test_circular_buffer.c  test_cli.c  test_delay_signal.c  test_double_buffer.c  test_filter.c  test_flash_error_log.c  test_flash_log.c  test_flash_manager.c  test_imu_manager.c  test_preprocess.c
Test/HeadersToMock/: cmsis_gcc.h  stm32u5xx_hal.h
Test/support/: circular_buffer_variants.h  filtered_output_fs100Hz_f01Hz_f08Hz_len60s.c  filtered_output_fs100Hz_f01Hz_f08Hz_len60s.h  imu_test_data.c  imu_test_data.h  test_helpers.c  test_helpers.h  test_signal_fs100Hz_f01Hz_f08Hz_len60s.c  test_signal_fs100Hz_f01Hz_f08Hz_len60s.h  test_signal_helpers.c  test_signal_helpers.h  walking_capture_output.c  walking_capture_output.h  walking_gravity_down_input.c  walking_gravity_down_input.h  walking_gravity_down_output.c  walking_gravity_down_output.h  walking_gravity_up_input.c  walking_gravity_up_input.h  walking_gravity_up_output.c  walking_gravity_up_output.h  walking_slowly_rotating_input.c  walking_slowly_rotating_input.h  walking_slowly_rotating_output.c  walking_slowly_rotating_output.h
(+88 files in other folders)
